--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,4 @@
 ---
-title: "Easily retrieve elevations and textures for rayshader mapping"
 output: github_document
 ---
 
@@ -14,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# spacey
+# spacey: Easily retrieve elevations and textures for rayshader mapping
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/spacey)](https://CRAN.R-project.org/package=spacey)
@@ -23,7 +22,7 @@ knitr::opts_chunk$set(
 
 ```{r}
 library(spacey)
-automap_2d(41.8781, -87.6298, overlay = "World_Imagery", overlay.alpha = 0.35)
+automap_2d(lat = 42.3601, lng = -71.0589)
 ```
 
 
