Add covr for codecov integration

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,8 +19,8 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/spacey)](https://CRAN.R-project.org/package=spacey)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Travis CI status](https://travis-ci.com/mikemahoney218/spacey.svg?branch=master)](https://travis-ci.com/mikemahoney218/spacey)
-[![Codecov Coverage](https://codecov.io/gh/mikemahoney218/spacey?branch=master)](https://codecov.io/gh/mikemahoney218/spacey)
 [![ApppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/mikemahoney218/spacey?branch=master&svg=true)](https://ci.appveyor.com/project/mikemahoney218/spacey)
+[![Codecov test coverage](https://codecov.io/gh/mikemahoney218/spacey/branch/master/graph/badge.svg)](https://codecov.io/gh/mikemahoney218/spacey?branch=master)
 <!-- badges: end -->
 
 ```{r demo_map}
