Add basic 3d support

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# spacey: Easily retrieve elevations and textures for rayshader mapping
+# spacey: Easy data retrieval and helpful defaults for rayshader mapping
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/spacey)](https://CRAN.R-project.org/package=spacey)
@@ -25,14 +25,30 @@ knitr::opts_chunk$set(
 
 ```{r demo_map}
 library(spacey)
-automap_2d(lat = 42.3601, lng = -71.0589, z = 0.3)
 ```
 
-The goal of `spacey` is to make it easy to work with packages like 
-[rayshader](https://www.rayshader.com/index.html) in order to create beautiful 
-landscape visualizations, pulling source data from the USGS for elevation 
-profiles and ESRI for textures to quickly create maps for the area relevant 
-to your analysis.
+The goal of `spacey` is to make it easy to work with the 
+[rayshader](https://www.rayshader.com/index.html) package in order to create 
+beautiful landscape visualizations, pulling source data from the USGS and ESRI 
+for beautifully shaded maps in 2D:
+
+```{r 2d-demo}
+automap(44.121268, -73.903734)
+```
+
+and 3D: 
+
+```{r 3d-demo}
+automap(44.121268, -73.903734, method = "3d")
+```
+
+
+And optionally with textures from satellite images as well:
+
+```{r 3d-demo-tex}
+automap(44.121268, -73.903734, overlay = "World_Imagery", method = "3d")
+```
+
 
 ## Installation
 
@@ -54,7 +70,7 @@ devtools::install_github("mikemahoney218/spacey")
 
 At the moment, `spacey` consists mainly of the following functions:
 
-* `automap_2d` uses a combination of sensible defaults to produce attractive 
+* `automap` uses a combination of sensible defaults to produce attractive 
   square map outputs from a single central point location.
 * `get_coord_bounding_box` finds the smallest rectangle required to contain 
   a list of lat/long coordinates.
