Allow custom textures, make some myself

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,33 +23,43 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/mikemahoney218/spacey/branch/master/graph/badge.svg)](https://codecov.io/gh/mikemahoney218/spacey?branch=master)
 <!-- badges: end -->
 
-```{r demo_map}
+The `spacey` package provides three main functions to make it easy to quickly 
+build beautiful maps of locations in the United States via the 
+`[rayshader](https://github.com/tylermorganwall/rayshader)` package. First off,
+it provides an `automap` function to quickly make maps using data from the USGS 
+national map:
+
+```{r johns_brook_basic}
 library(spacey)
-```
-
-The goal of `spacey` is to make it easy to work with the 
-[rayshader](https://www.rayshader.com/index.html) package in order to create 
-beautiful landscape visualizations, pulling source data from the USGS and ESRI 
-for beautifully shaded maps in 2D:
-
-```{r 2d-demo}
 automap(44.121268, -73.903734)
 ```
 
-and 3D: 
+As well as letting you incorporate overlay textures from ESRI's MapServer API:
 
-```{r 3d-demo}
-automap(44.121268, -73.903734, method = "3d")
+```{r johns_brook_overlay}
+automap(44.121268, -73.903734, overlay = "World_Imagery")
 ```
 
+And optionally even turn these into 3D visualizations:
 
-And optionally with textures from satellite images as well:
-
-```{r 3d-demo-textured}
-automap(44.121268, -73.903734, overlay = "World_Imagery", method = "3d")
+```{r johns_brook_3d}
+automap(44.121268,
+  -73.903734,
+  overlay = "World_Imagery",
+  method = "3d",
+  zoom = 10
+)
 ```
 
+And while `automap` tries to make it easy to configure these maps, `spacey` also
+lets you save off your heightmaps and overlays directly, either through 
+arguments to `automap` or the functions `get_heightmap` and `get_overlay`, so 
+that you can work directly with `rayshader` to make these maps by yourself.
 
+There's a lot more to these three functions, alongside a few basic geospatial 
+utilities `spacey` implements to make it easier to make maps from your data. For 
+more information, check out the 
+[introductory vignette](https://mikemahoney218.github.io/spacey/articles/introduction-to-spacey.html)!
 ## Installation
 
 If the CRAN version badge above is green, you can install the released version 
@@ -72,13 +82,6 @@ At the moment, `spacey` consists mainly of the following functions:
 
 * `automap` uses a combination of sensible defaults to produce attractive 
   square map outputs from a single central point location.
-* `get_coord_bounding_box` finds the smallest rectangle required to contain 
-  a list of lat/long coordinates.
-* `get_centroid_bounding_box` finds the corners of a square with diagonals a set
-  distance from a central point, enabling map creation for a single central 
-  lat/long combination.
-* `get_centroid` finds the central point for matched vectors of latitude and 
-  longitude.
 * `get_heightmap` retrives an elevation map from the USGS for a specified 
   boundary box and translates it into an R matrix.
 * `get_image_overlay` retrieves a texture from ESRI for a specified boundary 
@@ -86,6 +89,13 @@ At the moment, `spacey` consists mainly of the following functions:
 
 It also includes several helper functions, including:
 
+* `get_coord_bounding_box` finds the smallest rectangle required to contain 
+  a list of lat/long coordinates.
+* `get_centroid_bounding_box` finds the corners of a square with diagonals a set
+  distance from a central point, enabling map creation for a single central 
+  lat/long combination.
+* `get_centroid` finds the central point for matched vectors of latitude and 
+  longitude.
 * `load_heightmap` can import stored .tif files in order to used saved USGS 
   national map data (or potentially other sources).
 * `load_overlay` is an _extremely_ thin wrapper around 
