Add new vignette

--- a/vignettes/introduction-to-spacey.Rmd
+++ b/vignettes/introduction-to-spacey.Rmd
@@ -16,8 +16,8 @@ knitr::opts_chunk$set(
 
 `spacey` is a package designed to make it trivial to produce beautiful 
 [rayshader](https://www.rayshader.com/) maps for locations in the United States,
-letting you easily obtain and combine USGS and ESRI map data into 2D (and 
-eventually 3D) images. This vignette will walk through the basic utilities
+letting you easily obtain and combine USGS and ESRI map data into 2D and 3D 
+images. This vignette will walk through the basic utilities
 in `spacey` and their expected uses.
 
 First, let's load our package:
@@ -30,221 +30,210 @@ The most comprehensive command in `spacey` is `automap`, which only requires
 two vectors, one for latitude and one for longitude^[This package follows 
 [ISO 6709](https://en.wikipedia.org/wiki/ISO_6709) convention of representing 
 spatial data in the format (latitude, longitude), as opposed to the somewhat 
-popular (longitude, latitude) format.], in order to quickly generate a 2D 
-raytracer image. In fact, you can use as little as a single coordinate pair:
+popular (longitude, latitude) format.], in order to quickly generate a rayshader
+image. In fact, you can use as little as a single coordinate pair:
 
 ```r
-automap(lat = 42.3601, lng = -71.0589, z = 0.3)
+automap(44.121268, -73.903734)
 ```
 
-```{r, echo=FALSE, out.width='100%'}
-knitr::include_graphics("boston_simple.png")
+```{r, include=FALSE}
+knitr::include_graphics("../man/figures/README-johns_brook_basic-1.png")
 ```
 
-Behind the scenes, automap is doing a few different things that we'll discuss 
-separately:
+And it isn't much harder to add overlays of satellite imagery:
 
-* First, `automap` looks at your coordinates (alongside other optional 
-arguments) to determine how large a map should be drawn, calling a few 
-`spacey` functions built for geospatial data processing along the way
-* Next, `automap` uses that information to query the 
-  [USGS National Map](https://www.usgs.gov/core-science-systems/national-geospatial-program/national-map)
-  and [ESRI REST API](https://developers.arcgis.com/rest/) (no keys required) in
-  order to download elevation and optionally image data for the relevant area
-* Finally, `automap` takes that data and creates a rayshader map using 
-  sensible defaults, resulting in maps similar to the one above.
-
-We'll run through each of those steps as separate sections. 
-
-## Geospatial Data Processing
-
-There are a few simple geospatial processing commands baked into `spacey` in 
-order to figure out where exactly we should be making maps of. These functions 
-are called early on by the automap process to determine the relevant spatial 
-extent for your data, and include the following:
-
-* `get_centroid` will calculate the center of a set of points. For instance, 
-  let's say we had a dataset of two coordinate pairs -- we could find the 
-  central point between them like so:
-  
-```{r}
-get_centroid(lat = c(42.35375, 42.36645), lng = c(-71.06750, -71.05030))
+``` r
+automap(44.121268, -73.903734, overlay = "World_Imagery")
 ```
 
-Note that I'm using decimal degrees throughout this vignette. `spacey` also has 
-built-in support for measurements in radians, using the argument 
-`coord.unit = "radians"` in relevant functions. You can also transform your 
-coordinates yourself using the convenience functions `deg_to_rad` and 
-`rad_to_deg`, if necessary. There is currently no support for 
-degree-minute-second format.
+```{r include=FALSE}
+knitr::include_graphics("../man/figures/README-johns_brook_overlay-1.png")
+```
 
-* `get_coord_bounding_box` will find the bounding box for a set of coordinates 
-  (any length of latitude/longitude pairs), in order to pull the right area for 
-  your output map. For instance, we can use our same coordinates as above to 
-  find the edges of our data:
+Or turn those into 3D visuals:
 
-```{r}
-get_coord_bounding_box(
-  lat = c(42.35375, 42.36645),
-  lng = c(-71.06750, -71.05030)
+``` r
+automap(44.121268,
+  -73.903734,
+  overlay = "World_Imagery",
+  method = "3d",
+  zoom = 10
 )
 ```
 
-All `spacey` functions deal with boundary boxes via their bottom left 
-(minimum latitude, minimum longitude) and top right (maximum latitude, 
-maximum longitude) corners, named "bl" and "tr" in package outputs.
-
-* Finally, `get_centroid_bounding_box` will find the square bounding box for a 
-  set of central coordinates, with each corner a set distance away from the 
-  central point. For example, we can plug in the centroid we calculated earlier 
-  and ask for the corners 1 kilometer away like so:
-
-```{r}
-get_centroid_bounding_box(c("lat" = 42.3601, "lng" = -71.0589), distance = 1)
+```{r include=FALSE}
+knitr::include_graphics("../man/figures/README-johns_brook_3d-1.png")
 ```
 
-All `spacey` functions with distance arguments by default assume your units to 
-be in kilometers. You can change this behavior by passing an argument to 
-`dist.unit` -- currently, the other acceptable values are `miles`, `m` for 
-meters, and `ft` for feet.
+In addition, `automap` supports parallelization with `future` straight out of 
+the box to speed up map generation -- just call `future::plan("multisession")` 
+(or whatever plan you prefer) before `automap` to run the different rayshading 
+processes in parallel, notably speeding up the whole map generation process.
 
-Calling `autoplot_2d` with only two coordinates (that is, a single 
-latitude/longitude pair) will use `get_centroid_bounding_box` to find a suitable 
-square to map for your provided location. Using more than two coordinates will 
-do one of two things, depending on the value you provide to the `distance` 
-argument:
+All of the elevation and imagery data pulled by this package comes via the 
+[USGS National Map API](https://www.usgs.gov/core-science-systems/national-geospatial-program/national-map), 
+with the satellite imagery in particular coming via 
+[ESRI's MapServer API](https://services.arcgisonline.com/ArcGIS/rest/services). 
+If you want to save these off as files (so that you can work on your maps 
+without an Internet connection, or archive the data used), you can set 
+`save.file = TRUE` in your automap call and provide names for your output files:
 
-* A `distance` argument of 0 or `NA` will call `get_coord_bounding_box` and
-  then map the smallest rectangle that fits your data
-* Any other `distance` argument will then call `get_centroid`, followed by 
-  `get_centroid_bounding_box`, mapping a square of the specified distance around
-  your data's central location
-  
+``` r
+automap(44.121268, 
+        -73.903734, 
+        overlay = "World_Imagery",
+        save.file = TRUE, 
+        tif.filename = "my_heightmap.tif",
+        png.filename = "my_overlay.png")
+```
+
+It's also possible to set `save.file` to either `png` or `tif`, if you're only 
+interested in saving one type of file locally -- in which case, you only need to 
+provide one filename!
+
+In order to then build our maps from those local files, we only need to swap the
+`save.file = TRUE` argument out for `from.file = TRUE` in order to build from 
+local files:
+
+``` r
+automap(44.121268, 
+        -73.903734, 
+        overlay = "World_Imagery",
+        from.file = TRUE, 
+        tif.filename = "my_heightmap.tif",
+        png.filename = "my_overlay.png")
+```
+
+The `automap` function can be customized in dozens of ways to quickly iterate on
+maps, changing the specified overlays, terrain heights, color shading, and more.
+However, since every image I include here has to be downloaded by every single 
+person who installs the package (and CRAN has a limit on package sizes for this 
+very reason), those topics are covered online at the [package's documentation 
+website.](https://mikemahoney218.github.io/spacey/articles/automap-walkthrough.html)
+Instead, this vignette will focus on the other functions included in the 
+`spacey` package.
+
+If you only want to access the USGS and ESRI APIs, for instance, there's no need 
+to use the `automap` function at all. Instead, you can use the `get_heightmap` 
+and `get_image_overlay` functions to accomplish a similar effect.
+
+The largest difference with these functions (other than their return objects) is
+that they expect a _bounding box_ for your map, while `automap` will calculate 
+one for you based on the spatial extent of your input data and any value you 
+pass to its `distance` argument. The bounding box needs to be a list containing
+coordinates for the lower left and upper right corners of your data (as two 
+separate list elements) -- you can either provide these yourself, or use one of
+the two functions provided by `spacey` to do it for you!
+
+The first of these functions is `get_centroid_bounding_box`, which is what 
+`automap` uses to find the bounding box for a single coordinate pair. Just 
+provide a named vector with latitude and longitude for the center of your map, 
+alongside the distance you want your map to span (from the central location to 
+any corner):
+
+```{r}
+get_centroid_bounding_box(c(
+  "lat" = 44.121268,
+  "lng" = -73.903734
+),
+distance = 10
+)
+```
+
+If you have more than just a single coordinate pair, you're still able to get a 
+bounding box for your data via `get_coord_bounding_box` -- just pass it vectors 
+containing your latitude and longitude data:
+
+```{r}
+df <- data.frame(
+  lat = c(44.05771, 44.18475),
+  lng = c(-73.99212, -73.81515)
+)
+
+get_coord_bounding_box(df$lat, df$lng)
+```
+
+You can also still take advantage of expanding the map to a certain distance 
+from your data's central point by finding the centroid for your dataset -- using
+`get_centroid` -- and then passing that as the first argument to 
+`get_centroid_bounding_box`:
+
+```{r}
+get_centroid(df$lat, df$lng)
+
+get_centroid_bounding_box(get_centroid(df$lat, df$lng), 10)
+```
+
+All of these functions also have the option to work with (and return) data in 
+radians by setting `coord.unit = "radians"`; the default, however, is decimal 
+degrees. Functions which take `distance` arguments also have a `dist.unit` 
+argument, which can be used to provide distances in `"km"` (the default), 
+`"miles", "m"` (for meters), or `"ft"`. Note that the conversions between these
+units are imperfect, so use `km` if precision is needed.
+
+No matter which method you use, that bounding box can then be passed to 
+`get_heightmap` to obtain USGS elevation data for your area of interest, or 
+`get_image_overlay` to obtain satellite images:
+
+```r
+bbox <- get_centroid_bounding_box(c("lat" = 44.121268, 
+                                 "lng" = -73.903734), 
+                                distance = 10)
+
+heightmap <- get_heightmap(bbox)
+```
+
+Both of these functions also provide options to save the downloaded imagery to 
+file -- either using `save.tif` in `get_heightmap` or `save.png` in 
+`get_image_overlay`. You can then load these images back into an R session using 
+the `load_heightmap` or `load_overlay` functions, respectively, which will 
+create objects ready to be used for mapping with rayshader. 
+
+If we wanted, we can now
+replicate the default behavior of `automap` (although without supporting 
+parallelization via `future`) by doing the following:
+
+``` r
+library(rayshader)
+heightmap %>%
+  sphere_shade(zscale = 9,
+               texture = "imhof4") %>%
+  add_water(detect_water(heightmap,
+                         zscale = 9),
+      color = "imhof4") %>%
+      add_shadow(ray_shade(heightmap,
+                           zscale = 9),
+                 max_darken = 0.5) %>%
+      add_shadow(ambient_shade(heightmap, zscale = 9), max_darken = 0.5) %>%
+  plot_map()
+```
+
+```{r, include=FALSE}
+knitr::include_graphics("../man/figures/README-johns_brook_basic-1.png")
+```
+
+My guess is that most people who use `spacey` will eventually move on to 
+carefully designing their output maps, since you're able to control things with 
+much more granularity using the core `rayshader` functions than you are 
+with `spacey`. However, the data import functions and quick 
+iteration provided by `spacey` will hopefully help you get started with making 
+these beautiful maps, letting you spend less time fighting with data and more 
+time communicating your landscape to your audience.
+
+## Miscellania
+
+In addition to these main functions, `spacey` implements basic functions for 
+converting radians to degrees (via the function `rad_to_deg`) and back again
+(via `deg_to_rad`), which may be of some use. Note that these conversions are 
+done simply and will incurr some error from floating point arithmetic.
+
 It should be noted that `spacey` really isn't a geospatial processing library, 
 and these commands are built to be exactly as accurate as needed by core package
 functions. For that reason, you probably shouldn't rely upon `get_centroid` or 
 `get_*_bounding_box` for points near extreme latitudes or longitudes, as there
 are no adjustments built in to deal with these locations, since the USGS data 
 `spacey` is designed to work with doesn't really wrap those. 
-
-## API Access
-
-The next suite of functions provided by `spacey` are the API access functions, 
-which will pull data for your region from the USGS National Map and (optionally)
-the ESRI public API. A huge thank-you is in order here to 
-[Will Bishop](https://wcmbishop.github.io/rayshader-demo/), whose essay on using
-`rayshader` laid the groundwork for a lot of the API access code contained in 
-this package.
-
-There are two main functions used to access these APIs:
-
-* `get_heightmap` retrieves the USGS digital elevation model for the specified 
-  area, returning a raster matrix.
-* `get_image_overlay` retrives the ESRI image texture for the specified area, 
-  returning a PNG matrix.
-
-Both of these functions are essentially identical, taking a bounding box 
-(like the ones produced by `get_*_bounding_box`) and returning a matrix object
-which can be used by `rayshader` functions. 
-The basic syntax for `get_heightmap` is as simple as this:
-
-```r
-bounding_box <- get_centroid_bounding_box(c("lat" = 42.3601, 
-                                            "lng" = -71.0589), 
-                                          distance = 10)
-heightmap <- get_heightmap(bounding_box)
-```
-
-The syntax for `get_image_overlay` is almost as simple -- the only difference is 
-an additional parameter, `overlay`, which specifies which ESRI basemap to pull 
-the data for:
-
-```r
-overlay <- get_image_overlay(bounding_box, overlay = "World_Imagery")
-```
-
-(Note that I'm cheating a little bit for this vignette -- in order to get 
-properly sized graphics, the `get_heightmap` and `get_image_overlay` calls 
-used to build these maps both used the argument `major.dim = 1200`, doubling 
-the default image size.)
-
-You can also optionally save each 
-object into a file (using `save.tif` and `tif.filename` in `get_heightmap` and 
-`save.png` plus `png.filename` in `get_image_overlay`), letting you retrieve 
-the data later without having to ping the API (or worry about the data changing 
-between runs!). You can them reimport those files using either `load_heightmap` 
-for `.tif` files, or `load_overlay` for `.png` basemaps.
-
-## Mapping
-
-At this point, with our data imported into R, we're more than able to run our 
-data through `rayshader` in order to create beautiful, hand-tailored maps. In 
-fact, we can entirely replicate the map we started with by chaining together 
-a few steps:
-
-```r
-library(rayshader)
-heightmap %>%
-  sphere_shade(texture = "imhof4") %>%
-  add_water(detect_water(heightmap), color = "imhof4") %>%
-  add_shadow(ray_shade(heightmap, zscale = 0.3, lambert = TRUE), 
-             max_darken = 0.5) %>%
-  add_shadow(ambient_shade(heightmap, zscale = 0.3), max_darken = 0.5) %>%
-  plot_map()
-```
-
-```{r, echo=FALSE, out.width='100%'}
-knitr::include_graphics("boston_simple.png")
-```
-
-
-We can even add our overlay with just a single additional step:
-
-```r
-heightmap %>%
-  sphere_shade(texture = "imhof4") %>%
-  add_water(detect_water(heightmap), color = "imhof4") %>%
-  add_shadow(ray_shade(heightmap, zscale = 0.3, lambert = TRUE), max_darken = 0.5) %>%
-  add_shadow(ambient_shade(heightmap, zscale = 0.3), max_darken = 0.5) %>%
-  add_overlay(overlay, alphalayer = 0.75) %>%
-  plot_map()
-```
-
-```{r, echo=FALSE, out.width='100%'}
-knitr::include_graphics("boston_overlay.png")
-```
-
-
-My guess is that most people who use `spacey` will eventually move on to 
-carefully designing their output maps, since you're able to control things with 
-much more granularity using the core `rayshader` functions than you are 
-with anything in `spacey`. 
-
-However, the automapping facilities in `spacey` can let you 
-iterate on your design more quickly, testing out different shadings, 
-overlays, and colorations before moving on to more thorough map detailing using
-`rayshader` directly. Right now, the only function in `spacey` in this category 
-is `automap`, which will let you customize most `rayshader` variables in a 
-single function call:
-
-```r
-automap(lat = 42.3601, 
-           lng = -71.05, 
-           distance = 20,
-           overlay = "World_Terrain_Base", 
-           colorscale = c("water" = "unicorn", "land" = "bw"),
-           overlay.alpha = 0.3) %>%
-  plot_map()
-```
-
-```{r, echo=FALSE, out.width='100%'}
-knitr::include_graphics("boston_rainbow.png")
-```
-
-The hope is that by providing sensible defaults to iterate on and easy access 
-to data, `spacey` will help you make more and better maps, letting you prototype
-your ideas before committing to a design and helping you better understand your 
-study system and the world we live in.
 
 ## Acknowledgements
 
